--- a/project_3/online_registration_form_project/online_registration_form_project/index.html
+++ b/project_3/online_registration_form_project/online_registration_form_project/index.html
@@ -94,8 +94,8 @@
                                 <label for="plain_text">Plain Text</label>
                                 <br>
                             </fieldset>
-                        <h5>Other topics you'd like to hear about:</h5>
-                        <textarea class="text_1"></textarea>
+                        <label for="text">Other topics you'd like to hear about:</label>
+                        <textarea class="text_1" id="text" name="user_text"></textarea>
                         <br>
                         <button class="button_1" type="submit">Sign Up</button>
                     </form>
